// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EloModal should calculate performance 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-normal tracking-tight"
            >
              Elo Calculator
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Rating
          </button>
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Performance
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="max-h-48 space-y-2 overflow-y-auto pr-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="text-center"
              >
                1
                .
              </span>
              <input
                class="input input-sm input-bordered flex-1"
                type="number"
                value="1800"
              />
              <select
                class="select select-sm select-bordered flex-1"
              >
                <option
                  value="win"
                >
                  Win
                </option>
                <option
                  value="draw"
                >
                  Draw
                </option>
                <option
                  value="loss"
                >
                  Loss
                </option>
              </select>
            </div>
          </div>
          <button
            class="btn btn-outline btn-sm border-base-content/20 bg-base-100/10 hover:bg-base-100/20 w-full backdrop-blur"
          >
            Add Game
          </button>
          <button
            class="btn btn-primary btn-sm w-full"
          >
            Calculate Performance
          </button>
          <div
            class="form-control mt-4"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Performance
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-center font-normal"
              readonly=""
              type="number"
              value="1850"
            />
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`EloModal should calculate rating 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-normal tracking-tight"
            >
              Elo Calculator
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Rating
          </button>
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Performance
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Your Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              type="number"
              value="1000"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Opponent Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              type="number"
              value="1000"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Score
              </span>
            </label>
            <select
              class="select select-sm select-bordered w-full text-right"
            >
              <option
                value="win"
              >
                Win
              </option>
              <option
                value="draw"
              >
                Draw
              </option>
              <option
                value="loss"
              >
                Loss
              </option>
            </select>
          </div>
          <button
            class="btn btn-primary btn-sm w-full"
          >
            Calculate Rating
          </button>
          <div
            class="form-control mt-4"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                New Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right font-normal"
              readonly=""
              type="number"
              value="1020"
            />
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`EloModal should render rating tab 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-normal tracking-tight"
            >
              Elo Calculator
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Rating
          </button>
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Performance
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Your Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              type="number"
              value="1000"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Opponent Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              type="number"
              value="1000"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Score
              </span>
            </label>
            <select
              class="select select-sm select-bordered w-full text-right"
            >
              <option
                value="win"
              >
                Win
              </option>
              <option
                value="draw"
              >
                Draw
              </option>
              <option
                value="loss"
              >
                Loss
              </option>
            </select>
          </div>
          <button
            class="btn btn-primary btn-sm w-full"
          >
            Calculate Rating
          </button>
          <div
            class="form-control mt-4"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                New Rating
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right font-normal"
              readonly=""
              type="number"
              value="1000"
            />
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`EloModal should switch to performance tab 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-normal tracking-tight"
            >
              Elo Calculator
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Rating
          </button>
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Performance
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="max-h-48 space-y-2 overflow-y-auto pr-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="text-center"
              >
                1
                .
              </span>
              <input
                class="input input-sm input-bordered flex-1"
                type="number"
                value="1800"
              />
              <select
                class="select select-sm select-bordered flex-1"
              >
                <option
                  value="win"
                >
                  Win
                </option>
                <option
                  value="draw"
                >
                  Draw
                </option>
                <option
                  value="loss"
                >
                  Loss
                </option>
              </select>
            </div>
          </div>
          <button
            class="btn btn-outline btn-sm border-base-content/20 bg-base-100/10 hover:bg-base-100/20 w-full backdrop-blur"
          >
            Add Game
          </button>
          <button
            class="btn btn-primary btn-sm w-full"
          >
            Calculate Performance
          </button>
          <div
            class="form-control mt-4"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Performance
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-center font-normal"
              readonly=""
              type="number"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;
